kubernetes-101/istio-samples/istio-canary-gke/canary/destinationrule.yaml
# [START istio_istio_canary_gke_canary_destinationrule_productcatalogservice]
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productcatalogservice
spec:
  host: productcatalogservice
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
# [END istio_istio_canary_gke_canary_destinationrule_productcatalogservice]
---
