kubernetes-101/istio-samples/istio-canary-gke/canary/rollback.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
# [END istio_istio_canary_gke_canary_virtualservice_productcatalogservice]
---
