kubernetes-101/istio-samples/istio-canary-gke/canary/vs-split-traffic.yaml
# [START istio_istio_canary_gke_canary_virtualservice_productcatalogservice2]
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
      weight: 75
    - destination:
        host: productcatalogservice
        subset: v2
      weight: 25
# [END istio_istio_canary_gke_canary_virtualservice_productcatalogservice2]
---
